fix: remove RETURN_NUM_FOR_LENGTH out of function_call can return result

--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,9 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+
+# pascal
+GLIST
+GPATH
+GRTAGS
+GTAGS
