--- a/mypy.ini
+++ b/mypy.ini
@@ -3,3 +3,6 @@
 [mypy]
 warn_return_any = True
 warn_unused_configs = True
+explicit_package_bases = True
+strict = True
+ignore_missing_imports = False
