--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/spi"]
+
+[tool.hatch.build.targets.wheel.shared-data]
+"src/spi/py.typed" = "spi/py.typed"
